--- a/Generating-inputs.ipynb
+++ b/Generating-inputs.ipynb
@@ -1,17 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Authored by Nathan Young, Angela Xiao, Siyuan Fan"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 133,
-   "metadata": {
-    "collapsed": true
-   },
    "outputs": [],
    "source": [
     "import networkx as nx\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
